--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
-{
-  "files.exclude": {
-    ".vscode": true,
-    "**/*.js": true,
-    "tsconfig.json": true,
-    ".gitignore": true,
-  }
-}
+// {
+//   "files.exclude": {
+//     ".vscode": true,
+//     "**/*.js": true,
+//     "tsconfig.json": true,
+//     ".gitignore": true,
+//   }
+// }
